--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag DjWolfy01/nginx-basic-auth-proxy-whitelist-ip:$(date +%s)
+      run: docker build . --file Dockerfile --tag DjWolfy01/nginx-basic-auth-proxy-whitelist-ip:latest
